Increased default font size and fixed nav to not wrap text.

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,6 +1,7 @@
 @import "../node_modules/bootstrap/dist/css/bootstrap.css";
 
 body {
+  font-size: 16px;
   font-family: 'Lato', sans-serif;
   background: url("../images/open-sprints-bg.jpg") no-repeat center center fixed;
   background-size: cover;
