--- a/app/containers/Header.css
+++ b/app/containers/Header.css
@@ -42,6 +42,7 @@
   line-height: 0;
   cursor: pointer;
   text-transform: capitalize;
+  white-space: nowrap;
 }
 
 .intermission {
